fix: added a tab to the high scores list to align names better

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,6 +319,7 @@ input::placeholder {
 	margin-bottom: 0.5rem;
 	list-style: none;
 	line-height: 3.5rem;
+	white-space: pre;
 }
 
 .high-scores-lists div {
